# music-widget

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  shell.qml  uninstall.sh
data/: cava.conf  default-config.toml  music-widget.desktop  style.css
docs/: waybar.jsonc
helpers/: oauth-helper.py
modules/: MusicWindow.qml
modules/browser/: AuthOnboarding.qml  BrowserListView.qml  LocalBrowser.qml  PlaylistsPage.qml  SpotifyBrowser.qml
modules/components/: Chip.qml  IconButton.qml  MwSlider.qml  PageTab.qml  Stepper.qml  StyledText.qml
modules/controls/: ControlsPage.qml
modules/settings/: SettingsPage.qml
modules/visualizer/: VisualizerCanvas.qml  VisualizerPage.qml  styles.js
services/: Cava.qml  Config.qml  Players.qml  SpotifyApi.qml  SpotifyAuth.qml  Spotifyd.qml  Theme.qml  qmldir
src/music_widget/: __init__.py  __main__.py  app.py  config.py  player.py  theme.py
src/music_widget/controls/: page.py
src/music_widget/local/: browser.py
src/music_widget/spotify/: api.py  auth.py  browser.py  library.py  pagination.py  search.py  streaming.py
src/music_widget/ui/: helpers.py
src/music_widget/visualizer/: canvas.py  cava.py  page.py  styles.py
